--- a/app/default.cfg
+++ b/app/default.cfg
@@ -1,6 +1,2 @@
 [General]
-framerate=200
-frequency=0.5
-amplitude=200
-offset=1.57
-clockwise=false
+data_location="C:\Users\Ossi\Desktop\greenhousecontrol\app\data"
